2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * GraphicsPath.jvm.cs: AddString support.

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * ExtendedGeneralPath.jvm.cs: restore quadTo as curveTo affects quality

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * PathData.cs: fixing access modifiers.

2005-10-31 Konstantin Triger <kostat@mainsoft.com>

	* ExtendedGeneralPath.jvm.cs: forward quadTo to curveTo

2005-10-23 Vladimir Krasnov <vladimirk@mainsoft.com>

	* GraphicsState.jvm.cs: fixed ResetState, RestoreBaseClip
	
2005-10-19 Vladimir Krasnov <vladimirk@mainsoft.com>

	* GraphicsPath.jvm.cs: fixed FillMode, ConvertArcAngle, AddPath,
	CloseFigure
	
2005-10-19 Vladimir Krasnov <vladimirk@mainsoft.com>

	* LinearGradientBrush.jvm.cs: fixed clone(), SetBlendTriangularShape, 
	LinearColors, InterpolationColors, GetMedianeEnclosingRect, Init, NativeObject
	* PathGradientBrush.jvm.cs: fixed clone()

2005-10-04 Peter Dennis Bartok <pbartok@novell.com>

	* Matrix.cs: Call GC.SuppressFinalize with 'this' instead of 'true'

2005-09-26 Vladimir Krasnov <vladimirk@mainsoft.com>

	* PathGradientBrush.jvm.cs: implemetated transform, WrapMode, ctors
	* HatchBrush.jvm.cs: fallback to solid brush

2005-09-14 Konstantin Triger <kostat@mainsoft.com>

	* GraphicsPath.jvm.cs: fix drawing arcs for angles >= 360

2005-09-14 Konstantin Triger <kostat@mainsoft.com>

	* GraphicsState.jvm.cs: container

2005-09-11 Konstantin Triger <kostat@mainsoft.com>

	* GraphicsState.jvm.cs: fixing visible window for containers

2005-09-07 Konstantin Triger <kostat@mainsoft.com>

	* GraphicsPath.jvm.cs: correct angle to compute the quarter

2005-09-07 Konstantin Triger <kostat@mainsoft.com>

	* Matrix.jvm.cs: Fix copy order in CopyTo

2005-09-07 Boris Kirzner <borisk@mainsoft.com>

	* ExtendedGeneralPath.jvm.cs: Cache PathData and GeneralPath.
	* PathData.cs: always return cloned points and types. Use internals
	without clone for internal processing.
